<resources>
    <string name="app_name">Pander</string>
    <string name="login_usr">Nombre de usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="login_error">Usuario o contraseña invalidos</string>
    <string name="discotecas">Discotecas</string>
    <string name="open_drawer">Menu lateral abierto</string>
    <string name="close_drawer">Menu lateral cerrado</string>
    <string-array name="lista_canciones">
        <item>El muelle de San Blass</item>
        <item>Felices los 4</item>
        <item>Mariposa traicionera</item>
        <item>Fanatica</item>
        <item>Flor palida</item>
        <item>El cantante</item>
        <item>Dile</item>
        <item>Kripy cush</item>
        <item>Eres</item>
        <item>Criminal</item>
        <item>Bonita</item>
        <item>Hey Ma</item>
        <item>Para Enamorarte</item>
        <item>Báilame</item>
        <item>Mi Gente</item>
        <item>Shape Of You</item>
        <item>Solo Con Verte</item>
        <item>Si Tu Lo Dejas </item>
        <item>Pensando en ti</item>
        <item>Hey DJ</item>
        <item>Soy Peor Remix</item>
        <item>Tu falta de querer</item>
        <item>Sin Contrato</item>
        <item>Lo Aprendi de Ti</item>
        <item>Si Tu Novio Te Deja Sola</item>
        <item>Amor verdadero</item>
        <item>Robarte Un Beso</item>
        <item>Bonita</item>
        <item>Llegaste tu</item>
        <item>Sexto Sentido</item>
        <item>Sin Principio ni final</item>
        <item>Adios Amor</item>
        <item>Te vi venir</item>
        <item>Dile Que Tu Me Quieres</item>
        <item>Tus ojos</item>
        <item>Dime Quien Me Ama De Verdad</item>
        <item>Coseme</item>
        <item>Probablemente</item>
        <item>Ya Me Entere</item>
        <item>Te Metiste</item>
        <item>Amor completo</item>
        <item>Destino O Casualidad</item>
        <item>Me acostumbre</item>
        <item>Como olvidarme</item>
        <item>Escapate Conmigo</item>
        <item>Si Me Muero</item>
        <item>Un Ratito Mas</item>
        <item>Aqui estoy yo</item>
        <item>Quisiera</item>
        <item>La Rompe Corazones</item>
        <item>Algo de Vos</item>
        <item>Amarrame </item>
        <item>Explicale</item>
        <item>Una Flor</item>
        <item>Bailame</item>
        <item>No te hagas </item>
        <item>Perdon</item>
        <item>Ella</item>
        <item>Me Soltaste</item>
        <item>Ahora Me Llama</item>
        <item>Pensamientos</item>
        <item>Mi angel</item>
        <item>Perro Fiel </item>
        <item>Imitadora</item>
        <item>Tu me cambiaste la vida</item>
        <item>Tengo Que Colgar</item>
        <item>Amor Perfecto</item>
        <item>Corazon de Seda</item>
        <item>Mi vida eres tu</item>
        <item>Sabes</item>
        <item>Nada Es Como Tu</item>
        <item>El Amante</item>
        <item>Creo en ti</item>
        <item>Mi Persona Favorita</item>
        <item>Dueles</item>
        <item>Bad Bunny - Caile</item>
        <item>Me Ama Me Odia</item>
        <item>Despacito</item>
        <item>Tu Foto</item>
        <item>Ahora Me Llama</item>
        <item>Soy Peor</item>
        <item>Cuatro Babys</item>
        <item>Escapate conmigo</item>
        <item>El Farsante</item>
        <item>Me Mata</item>
        <item>Ahora Dice</item>
        <item>Reggaeton Lento</item>
        <item>Me Rehuso</item>
        <item>La Ultima Vez</item>
        <item>Contigo siempre</item>
        <item>Se Preparo</item>
        <item>Me mata la melancolia</item>
        <item>Por un Beso de Tu Boca</item>
        <item>Niégame tres veces</item>
        <item>Ya No Me Duele Mas</item>
        <item>La Que Me Quiere La Quiero</item>
        <item>10000 litros de old parr</item>
        <item>A blanco y negro</item>
        <item>A Escondidas</item>
        <item>A mi no</item>
        <item>A Un Amor Prohibido</item>
        <item>Acepto el reto</item>
        <item>Alucinaciones</item>
        <item>Amorsito consentido</item>
        <item>Apuestale al Man</item>
        <item>Asi no Sirve</item>
        <item>Asi te quiero</item>
        <item>Aunque despues me duela</item>
        <item>Ay amor</item>
        <item>Baila vallenato</item>
        <item>Bendecido Por La Vida</item>
        <item>Calidad de vida</item>
        <item>Cantinero</item>
        <item>Casate Conmigo</item>
        <item>Cautivo mi canto</item>
        <item>Celoso y que</item>
        <item>Cerquita</item>
        <item>Chamame</item>
        <item>Come y Vuelve</item>
        <item>Como lo hizo</item>
        <item>Como olvidarte</item>
        <item>Corre ve y dile</item>
        <item>Culpa de los dos</item>
        <item>Culpa de quien?</item>
        <item>Dame un Besito</item>
        <item>Dejame quererte</item>
        <item>Chilax</item>
        <item>Adicto A Tu Amor</item>
        <item>Ahi esta la luna</item>
        <item>Amor Clandestino</item>
        <item>Angel De Amor</item>
        <item>Antifaz</item>
        <item>Arde el cielo</item>
        <item>Arrancame el corazón</item>
        <item>Ay, Doctor</item>
        <item>Baila morena</item>
        <item>Bailando</item>
        <item>Bendita Tu Luz</item>
        <item>Buscandola</item>
        <item>Cachito</item>
        <item>Cara de la luna</item>
        <item>Cara de oso</item>
        <item>Cayo mi nave</item>
        <item>Celoso</item>
        <item>Clavado En Un Bar</item>
        <item>Coladito</item>
        <item>Combatiente</item>
        <item>Como diablos</item>
        <item>Como Quisiera</item>
        <item>Como Te Deseo</item>
        <item>Como te extraño corazon</item>
        <item>Como un perro enloquecido</item>
        <item>Con dinero y sin dinero</item>
        <item>Contra Todo</item>
        <item>Corazon Espinado</item>
        <item>Cuando Los Angeles Lloran</item>
        <item>Dame Amor</item>
        <item>Dame una señal</item>
        <item>De Pies A Cabeza</item>
        <item>Dejame entrar</item>
        <item>Desapariciones</item>
        <item>Desde que te vi</item>
        <item>Dime Luna</item>
        <item>El Borracho</item>
        <item>El celoso </item>
        <item>El Desierto</item>
        <item>El Espejo</item>
        <item>El Verdadero Amor Perdona</item>
        <item>El viaje</item>
        <item>El viento en la isla</item>
        <item>Electrizado</item>
        <item>En la playa</item>
        <item>Entre por la ventana</item>
        <item>Envenename</item>
        <item>Eres Mi Religion</item>
        <item>Estoy Agotado</item>
        <item>Falta amor</item>
        <item>Fuiste mi primer amor</item>
        <item>Gitana</item>
        <item>Gracias a la vida</item>
        <item>Hasta que te conoci</item>
        <item>Hechicera</item>
        <item>Huele a Trizteza</item>
        <item>Hundido en un Rincon</item>
        <item>Ironia</item>
        <item>Justicia Tierra Y Libertad</item>
        <item>La bella suerte</item>
        <item>La Cama Incendiada</item>
        <item>La cara de la luna</item>
        <item>La chula</item>
        <item>La Prision</item>
        <item>La puerta azul</item>
        <item>La razon que te demora</item>
        <item>La sirena</item>
        <item>Labios Compartidos</item>
        <item>Latinoamerica</item>
        <item>Lentes de sol</item>
        <item>Lluvia al Corazon</item>
        <item>Luz y Drama</item>
        <item>Maldita bruja</item>
        <item>Manda una señal</item>
        <item>Me Vale</item>
        <item>Mi Corazon No Sabe Olvidar</item>
        <item>Mi reina del dolor</item>
        <item>Mi verdad</item>
        <item>Mis Ojos</item>
        <item>Mueve tus caderas</item>
        <item>Nada que perder</item>
        <item>Nadie me va a parar</item>
        <item>No estas sola</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_content_navigation">FragmentContentNavigationActivity
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-8120011798224613/2943092570</string>
</resources>